Migrate to maven wrapper and upgrade library to lastest version. know issue: RedmineManagerFactory there are many proxy version that have to be dive in, because I commented out and put default proxy everywhere